add startPageControllerUITest but not working